<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notifications">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.diegruender49.smokinghabit.ui.edit.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.diegruender49.smokinghabit.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="de.diegruender49.smokinghabit.LogEntryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_log_entry_list" />
</navigation>