<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <Button
        android:id="@+id/buttonDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"

        android:maxLines="1"
        android:minWidth="96dp"
        android:paddingBottom="12dp"
        android:text="@string/day"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/buttonDay"

        android:maxLines="1"
        android:minWidth="96dip"
        android:paddingBottom="12dp"
        android:text="@string/month"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/buttonMonth"

        android:maxLines="1"
        android:minWidth="96dip"
        android:paddingBottom="12dp"
        android:text="@string/all"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@id/buttonMonth"
        android:maxLines="1"
        android:minWidth="72dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>