<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buttonbar">

    <LinearLayout
        android:id="@+id/bottonrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="35dp"
            android:gravity="left"
            android:minWidth="64dip"
            android:paddingBottom="12dp"
            android:text="@string/day" />

        <Button
            android:id="@+id/buttonMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:minWidth="64dip"
            android:paddingBottom="12dp"
            android:text="@string/month" />

        <Button
            android:id="@+id/buttonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:minWidth="64dip"
            android:paddingBottom="12dp"
            android:text="@string/all" />

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right|end"
            android:minWidth="72dip"
            android:text="@string/home"
            app:icon="@drawable/ic_home_black_24dp" />
    </LinearLayout>

</RelativeLayout>