<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SmokingHabit.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.SmokingHabit.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/smokeloglabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:labelFor="@id/smokelogtext"
            android:text="@string/latest_log_entries"
            app:layout_constraintStart_toStartOf="@id/smokelogtext"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/smokelogtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:maxLines="4"
            android:minHeight="48dp"
            android:text="@string/latest_log_entries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smokeloglabel" />

        <TextView
            android:id="@+id/stattablelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/stattable"
            android:text="@string/key_figures"
            app:layout_constraintStart_toStartOf="@id/stattable"
            app:layout_constraintBottom_toTopOf="@id/stattable" />

        <TableLayout
            android:id="@+id/stattable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/button_smokenow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smokelogtext"
            tools:visibility="visible">

            <TableRow
                android:id="@+id/daycountrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/daycountlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:labelFor="@id/daycount"
                    android:text="@string/count_today"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/daycount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="0"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/day24hcountrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/day24hcountlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:labelFor="@id/daycount"
                    android:text="@string/count_last24h"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/day24hcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="0"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </TableRow>

            <TableRow
                android:id="@+id/smokefreetimerow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/smokefreetimelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:labelFor="@id/daycount"
                    android:text="@string/smoke_free_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/smokefreetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="0"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>


        <Button
            android:id="@+id/button_smokenow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:height="72dp"
            android:text="@string/smokenow"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_smoking_rooms_24"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stattable" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_charts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/button_margin"
        android:contentDescription="chart img"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>