<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.EditFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelLogDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editLogDate"
                android:text="@string/date" />

            <EditText
                android:id="@+id/editLogDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                tools:text="@tools:sample/date/ddmmyy" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelLogTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editLogTime"
                android:text="Time" />

            <EditText
                android:id="@+id/editLogTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="time"
                android:minHeight="48dp"
                tools:text="@tools:sample/date/hhmm" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelLogDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editLogDesc"
                android:text="@string/description" />

            <EditText
                android:id="@+id/editLogDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/description" />

        </LinearLayout>
    </HorizontalScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/save"
        android:text="@string/save" />

</LinearLayout>